# churn_modellling

./: hello.py  pyproject.toml
src/: churn_model_nn.py
